[package]
name = "LoLobs"
version = "0.1.0"
edition = "2024"

[dependencies]
irelia = { version = "0.11.2", features = ["full"] }
actix-web = "4.13.0"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
actix-web-actors = "4.3.0"
actix = "0.13.5"
async-stream = "0.3.6"
futures-util = "0.3.32"
actix-files = "0.6.10"
reqwest = { version = "0.13.3", features = ["json"] }
rustls = { version = "0.23.40", features = ["ring"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
